Can't use Render Image as Background Image #41984

Closed
opened 2014-09-28 06:39:00 +02:00 by S J Bennett · 5 comments
Member

System Information
Win7 64-bit, GTX 580 gfxcard, 16GB RAM
Xubuntu 64-bit, unsure of specs

Blender Version
Broken:

  • Win64: 2.72 RC1 and 2.71 release (seems to be broken as far back as 2.5 alpha2, tested 2.53, 2.56a, 2.57b, 2.60a - the error message is different in older versions)
  • Linux: 2.71 release

When choosing "Render Result" for a background image in 3D View, Blender reports that it "can't load image" (versions before 2.60a in tested list report "can not get an image").

Exact steps for others to reproduce the error

  1. Start Blender, go past the splash screen to Default Cube
  2. Press F12 to render the noble default cube in its natural habitat
  3. Switch to 3D View, go to "Background Images" and tick it.
  4. Add an image. Choose "Render Result" (should be only addable image)
  5. Render Result dialogues become visible (Slot/Layer/Pass) but Blender says "can't load image"

Bonus round:

  1. Remove background image.
  2. Save rendered image somewhere in UV/Image Editor.
  3. Go through steps 3-5 again. Appears to make no difference to Blender whether it's saved or not.

Expectation: Either Render Result shouldn't be offered as a background image if it doesn't work, or (more likely) an intended feature is broken.

**System Information** Win7 64-bit, GTX 580 gfxcard, 16GB RAM Xubuntu 64-bit, unsure of specs **Blender Version** Broken: - Win64: 2.72 RC1 and 2.71 release (seems to be broken as far back as 2.5 alpha2, tested 2.53, 2.56a, 2.57b, 2.60a - the error message is different in older versions) - Linux: 2.71 release When choosing "Render Result" for a background image in 3D View, Blender reports that it "can't load image" (versions before 2.60a in tested list report "can not get an image"). **Exact steps for others to reproduce the error** 1. Start Blender, go past the splash screen to Default Cube 2. Press F12 to render the noble default cube in its natural habitat 3. Switch to 3D View, go to "Background Images" and tick it. 4. Add an image. Choose "Render Result" (should be only addable image) 5. Render Result dialogues become visible (Slot/Layer/Pass) but Blender says "can't load image" Bonus round: 1. Remove background image. 2. Save rendered image somewhere in UV/Image Editor. 3. Go through steps 3-5 again. Appears to make no difference to Blender whether it's saved or not. Expectation: Either Render Result shouldn't be offered as a background image if it doesn't work, or (more likely) an intended feature is broken.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @quollism

Added subscriber: @quollism

This issue was referenced by 653b67055b

This issue was referenced by 653b67055b2dec321ef68114d5cace05113f9102
Bastien Montagne self-assigned this 2014-09-28 18:29:43 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 653b67055b.

Closed by commit 653b67055b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41984
No description provided.