Fix T41984: Can't use Render Image as Background Image.

Changes were actually pretty simple to make it work - set 'scene' member of image user,
and handle lock when acquiring/releasing ibuf...